Fix issues with hover effect of todo items below collapsed todo list

--- a/src/app/components/todo-list-tree-item/todo-list-tree-item.component.scss
+++ b/src/app/components/todo-list-tree-item/todo-list-tree-item.component.scss
@@ -22,7 +22,6 @@
 }
 
 .items-container {
-	margin-bottom: 12px;
 	margin-left: 13px;
 	padding-left: 13px;
 	border-left: 1px solid rgb(var(--dav-color-outline-rgb), 0.15);
